# cpp_template

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  cpp_template.sublime-project
docs/: doxygen.config.in  index.rst
docs/sphinx/: conf.py
site/: site-public.cmake
src/: CMakeLists.txt  main.cpp
toolchain/: unix-macos.cmake  unix-mingw32.cmake
tools/: docker_shell.sh  generate_doc.sh  release.sh  run_make.sh
tools/build-env/: Dockerfile_ubuntu_2204
tools/lib/: core.sh  docgen.sh  target.sh  toolchain.sh
unittest/: CMakeLists.txt  main.cpp
